# KukaBot

./: CMakeLists.txt
app/: jogger  jogger.c  monitor  monitor.c  wiggle.c
docs/: rsi_api_documentation.md  rsi_protocol_doc.md
include/: kuka_rsi.h
src/: internal.h  kuka_rsi.c
